# rent_collector

./: .gitignore  Dockerfile  README.md  clean_prepare_run.bat  docker-compose.dev.yml  docker-compose.dev2.yml  docker-compose.prod.yml  env.dev  env.prod  pyproject.toml
caddy/: Caddyfile  Dockerfile
cron/: Dockerfile  crontab  entry.sh  readme.md
docs/: db_scripts.txt  deployment.md  django-mgmt-commands.txt  django.txt  docker.txt  git.txt  packages.txt  pipenv-howto.txt  pipenv.md  postgres.md  scheduling.txt  sms.md  table.md
docs/alert_popup/: alert.py  alerts.html
src_django/: Dockerfile  env.dev  gunicorn.sh  manage.py  pyproject.toml  rundevserver.sh
src_django/django_main/: settings.py  urls.py  wsgi.py
src_django/rents/: apps.py
src_django/rents/management/commands/: delete_all.py
tests/: mail.py
