[tool.poetry]
name = "rent_collector"
version = "0.1.0"
description = ""
authors = ["Jonas Pfeifer"]

[tool.poetry.dependencies]
python = "3.9"
django = "^3.1.2"
pandas = "^1.1.4"
djangorestframework = "^3.12.1"
django-pandas = "^0.6.2"
psycopg2-binary = "^2.8.6"
gunicorn = "^20.0.4"
django-filter = "^2.4.0"
django-request = "^1.5.6"


[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pycodestyle = "^2.6.0"
black = "^20.8b1"
isort = "^5.6.4"
taskipy = "^1.4.0"
python-dotenv = "^0.15.0"



[tool.taskipy.tasks]
serve = "python .\\src_django\\manage.py runserver"
format = "task isort && task black"
black = "black ."
isort = "isort --recursive --check-only ."
pycodestlye = ""

[tool.taskipy.settings]
runner = "dotenv run"